--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,7 +3,7 @@
 
 
 <div class="row">
-    <div class="col-6">
+    <div class="col-md-6">
         <div
             id="campgroundCarusel"
             class="carousel slide"
@@ -82,7 +82,7 @@
             </div>
         </div>
          
-        <div class="col-6">
+        <div class="col-md-6">
             <div id='map' ></div>
             <% if (currentUser) { %>
             <h2>Leave a Review</h2>
